--- a/JSProjects/TechIQFarmDashboard/Style.css
+++ b/JSProjects/TechIQFarmDashboard/Style.css
@@ -1,8 +1,11 @@
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500&display=swap');
+
+body, html {
+    height: 100%;
     margin: 0;
     padding: 20px;
-    background-color: #f4f4f4;
+    font-family: 'Work Sans' , sans-serif;
+    background-color: #f0f0f0;
   }
   
   .container {
@@ -24,7 +27,7 @@ body {
   .header {
     background-color: #f0f0f0;
     color: #000000;
-    font-weight: bold;
+    font-weight: 500;
     border-bottom: 2px solid #e0e0e0;
     text-align: left;
   }
